tcr: Module system and inference over typeclasses